--- a/src/html/parts/navbar-top.html
+++ b/src/html/parts/navbar-top.html
@@ -79,12 +79,9 @@
                             <span class="user-name">Айварас Абромавичюс</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right">
-                            <a href="#" class="dropdown-item"><i class="ft-user"></i> Edit Profile</a>
-                            <a href="#" class="dropdown-item"><i class="ft-mail"></i> My Inbox</a>
-                            <a href="#" class="dropdown-item"><i class="ft-check-square"></i> Task</a>
-                            <a href="#" class="dropdown-item"><i class="ft-comment-square"></i> Chats</a>
+                            <a href="#" class="dropdown-item"><i class="ft-user"></i> Редагувати профіль</a>
                             <div class="dropdown-divider"></div>
-                            <a href="#" class="dropdown-item"><i class="ft-power"></i> Logout</a>
+                            <a href="#" class="dropdown-item"><i class="ft-power"></i> Вихід</a>
                         </div>
                     </li>
                 </ul>
