--- a/src/html/parts/fund-list.html
+++ b/src/html/parts/fund-list.html
@@ -18,13 +18,13 @@
                             <figure class="card card-img-top border-grey border-lighten-2">
                                 <a href="#"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
                                 <div class="card-block px-0">
-                                    <a href="#">Про фонд</a>
+                                    <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
                                 </div>
                             </figure>
                             <figure class="card card-img-top border-grey border-lighten-2">
                                 <a href="../../../app-assets/images/gallery/1.jpg"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
                                 <div class="card-block px-0">
-                                    <a href="#">Про фонд</a>
+                                    <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
                                 </div>
                             </figure>
                         </div>
@@ -34,13 +34,13 @@
                             <figure class="card card-img-top border-grey border-lighten-2">
                                 <a href="#"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
                                 <div class="card-block px-0">
-                                    <a href="#">Про фонд</a>
+                                    <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
                                 </div>
                             </figure>
                             <figure class="card card-img-top border-grey border-lighten-2">
                                 <a href="../../../app-assets/images/gallery/1.jpg"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
                                 <div class="card-block px-0">
-                                    <a href="#">Про фонд</a>
+                                    <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
                                 </div>
                             </figure>
                         </div>
@@ -57,13 +57,45 @@
                             <figure class="card card-img-top border-grey border-lighten-2">
                                 <a href="#"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
                                 <div class="card-block px-0">
-                                    <a href="#">Про фонд</a>
+                                    <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
                                 </div>
                             </figure>
                             <figure class="card card-img-top border-grey border-lighten-2">
                                 <a href="../../../app-assets/images/gallery/1.jpg"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
                                 <div class="card-block px-0">
-                                    <a href="#">Про фонд</a>
+                                    <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
+                                </div>
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="card-deck-wrapper">
+                        <div class="card-deck">
+                            <figure class="card card-img-top border-grey border-lighten-2">
+                                <a href="#"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
+                                <div class="card-block px-0">
+                                    <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
+                                </div>
+                            </figure>
+                            <figure class="card card-img-top border-grey border-lighten-2">
+                                <a href="../../../app-assets/images/gallery/1.jpg"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
+                                <div class="card-block px-0">
+                                    <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
+                                </div>
+                            </figure>
+                        </div>
+                    </div>
+                    <div class="card-deck-wrapper">
+                        <div class="card-deck">
+                            <figure class="card card-img-top border-grey border-lighten-2">
+                                <a href="#"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
+                                <div class="card-block px-0">
+                                    <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
+                                </div>
+                            </figure>
+                            <figure class="card card-img-top border-grey border-lighten-2">
+                                <a href="../../../app-assets/images/gallery/1.jpg"><img class="gallery-thumbnail card-img-top" src="https://dummyimage.com/640x480/ccc/ffffff.png&text=Лого" itemprop="thumbnail" alt="Image description"></a>
+                                <div class="card-block px-0">
+                                    <a href="#" class="notification-text font-small-3 text-muted">Про фонд</a>
                                 </div>
                             </figure>
                         </div>
