deal with main user page

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,6 +1,7 @@
 <footer id="footer" class="footer footer-static footer-light navbar-border">
-
+    <div class="row match-height">
         <div class="col-md-4 col wh100-col">
+            <div class="card">
             <div class="media wh100">
                 <div class="media-left">
                     <a href="https://bihus.info/projects/go-kancelarska-sotna" target="_blank" title="Канцелярська сотня">
@@ -74,8 +75,10 @@
                         <a class="more-link" href="https://bihus.info/projects/garnahata" target="_blank" title="ГАРНАХАТА">Детальніше</a></p>
                 </div>
             </div>
+            </div>
         </div>
         <div class="col-md-3 col bihus-col">
+            <div class="card">
             <div class="bihusinfo-subblock">
                 <a class="footer-logo" href="https://bihus.info/about" target="_blank"><!--(bake _svg-logo.html logo="bihus-inverse")--></a>
                 <p>Bihus.info об'єднує антикорупційні проекти, які створює ГО "ТОМ 14" та ГО "Канцелярська сотня". <a target="_blank" class="more-link" href="https://bihus.info/about">Детальніше</a></p>
@@ -89,8 +92,10 @@
                 <h3>Підпишись на новини</h3>
                 <iframe frameborder="0" src="https://secure.esputnik.com.ua/23oNbk6320s" width="80%" height="109" scrolling="no"></iframe>
             </div>
+            </div>
         </div>
         <div class="col-md-5 col vol14-col">
+            <div class="card">
             <div class="media tom14">
                 <div class="media-left">
                     <a href="https://bihus.info/projects/go-tom-14" target="_blank" title="ТОМ 14">
@@ -162,5 +167,7 @@
                         <a class="more-link" href="https://bihus.info/projects/nasi-grosi-dosudilisa" target="_blank" title="НАШІ ГРОШІ. ДОСУДИЛИСЯ.">Детальніше</a></p>
                 </div>
             </div>
+            </div>
         </div>
+    </div>
 </footer>
