--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,4 +1,5 @@
 <footer id="footer" class="footer footer-static footer-light navbar-border">
+    <div class="footer-container">
     <div class="row match-height">
         <div class="col-md-4 col wh100-col">
             <div class="card">
@@ -169,5 +170,6 @@
             </div>
             </div>
         </div>
+    </div>
     </div>
 </footer>
