init with fund-page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -228,7 +228,7 @@
 
         <div class="sidebar-detached sidebar-right">
               <div class="sidebar">
-                  <!--(bake parts/fund-list.html)-->
+                  <!--(bake parts/fund-list.html title="Допоможи їм")-->
               </div>
           </div>
       </div>
