--- a/src/html/parts/fund-list.html
+++ b/src/html/parts/fund-list.html
@@ -2,7 +2,7 @@
     <!-- Project Users -->
     <div class="card">
         <div class="card-header mb-0">
-            <h4 class="card-title">Допоможи їм</h4>
+            <h4 class="card-title">{{title}}</h4>
             <a class="heading-elements-toggle"><i class="fa fa-ellipsis-v font-medium-3"></i></a>
             <div class="heading-elements">
                 <ul class="list-inline mb-0">
