--- a/src/html/not-logged-index.html
+++ b/src/html/not-logged-index.html
@@ -9,17 +9,25 @@
       <div class="navbar-wrapper">
         <div class="navbar-header">
           <ul class="nav navbar-nav">
-            <li class="nav-item mobile-menu hidden-md-up float-xs-left"><a href="#" class="nav-link nav-menu-main menu-toggle hidden-xs"><i class="ft-menu font-large-1"></i></a></li>
-            <li class="nav-item"><a href="index.html" class="navbar-brand"><img alt="stack admin logo" src="../../../app-assets/images/logo/stack-logo.png" class="brand-logo">
-                <h2 class="brand-text">Ж.В.</h2></a></li>
+              <li class="nav-item hidden-md-up">
+                  <a href="index.html" class="navbar-brand">
+                      <img alt="stack admin logo" src="../../../app-assets/images/logo/stack-logo.png" class="brand-logo">
+                      <h2 class="brand-text">Ж.В.</h2>
+                  </a>
+              </li>
             <li class="nav-item hidden-md-up float-xs-right"><a data-toggle="collapse" data-target="#navbar-mobile" class="nav-link open-navbar-container"><i class="fa fa-ellipsis-v"></i></a></li>
           </ul>
         </div>
         <div class="navbar-container container center-layout">
           <div id="navbar-mobile" class="collapse navbar-toggleable-sm">
-            <ul class="nav navbar-nav">
-              <li class="nav-item hidden-sm-down"><a href="#" class="nav-link nav-menu-main menu-toggle hidden-xs"><i class="ft-menu"></i></a></li>
-              <!--<li class="nav-item hidden-sm-down"><a href="#" class="nav-link nav-link-expand"><i class="ficon ft-maximize"></i></a></li>-->
+            <ul class="nav navbar-nav float-xs-left">
+
+                <li class="nav-item">
+                    <a href="index.html" class="navbar-brand">
+                        <img alt="stack admin logo" src="../../../app-assets/images/logo/stack-logo.png" class="brand-logo">
+                        <h2 class="brand-text">Ж.В.</h2>
+                    </a>
+                </li>
             </ul>
             <ul class="nav navbar-nav float-xs-right">
               <li class="nav-item">
@@ -34,25 +42,24 @@
       </div>
     </nav>
 
+    <div class="imagebg-box">
+        <div class="imagebg-content"><div><span><h1 class="t">Допомогати — просто!</h1></span></div></div>
+    </div>
+
     <div class="app-content container center-layout mt-2">
       <div class="content-wrapper">
         <div class="content-body">
-          <!-- Description -->
-          <section id="description" class="card transparent-card">
+            <!-- Description -->
+            <section id="description" class="card transparent-card">
               <div class="card-body collapse in">
                   <div class="card-block">
                       <div class="card-text">
-                          <div class="steps-intro">
-                              <div class="alert alert-icon-right alert-info alert-dismissible fade in mb-2" role="alert">
-                                  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                      <span aria-hidden="true">×</span>
-                                  </button>
-                                  <p>Тут такий коротенький текст вступу і все таке. Бла бла бла. Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</p>
-                              </div>
-                          </div>
+                          <!--<div class="steps-intro">
+                              <p>Тут такий коротенький текст вступу і все таке. Бла бла бла. Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</p>
+                          </div>-->
 
                           <div class="steps-header">
-                              <h1>Як взагалі ти можеш допомогти?</h1>
+                              <h2>Як взагалі ти можеш допомогти?</h2>
                               <h3>Ось три прості кроки:</h3>
                           </div>
 
@@ -62,7 +69,15 @@
                                   <div class="step-text">
                                       <h5 class="bg-amber bg-lighten-1 white">Крок перший</h5>
                                       <h2 class="t tn amber lighten-1"><i class="fa fa-list-ol" aria-hidden="true"></i> Обери завдання</h2>
-                                      <p>Увійдіть та оберіть одне із завдань та виконейте його. На свій смак. Вони не складні.</p>
+                                      <div class="btn-group">
+                                          <button type="button" class="btn btn-danger bg-amber bg-lighten-1 border-amber border-lighten-1 btn-min-width dropdown-toggle ib btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-o"></i> Увійдіть</button>
+                                          <div class="dropdown-menu">
+                                              <a class="dropdown-item" href="#">Увійти за логіном</a>
+                                              <a class="dropdown-item" href="#">За допомогою Facebook</a>
+                                          </div>
+                                      </div>
+
+                                      <p>та оберіть одне із завдань та виконейте його. На свій смак. Вони не складні.</p>
                                   </div>
                                   <img class="step-image" src="app-assets/images/pages/step-1.png" alt="Image description">
                               </div>
@@ -86,15 +101,165 @@
                                   </div>
                                   <img class="step-image" src="app-assets/images/pages/step-3.png" alt="Image description">
                             </div>
+
+                              <div class="btn-group mt-2 mb-2">
+                                  <button type="button" class="btn btn-primary btn-min-width dropdown-toggle ib" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-o"></i> Увійти</button>
+                                  <div class="dropdown-menu">
+                                      <a class="dropdown-item" href="#">Увійти за логіном</a>
+                                      <a class="dropdown-item" href="#">За допомогою Facebook</a>
+                                  </div>
+                              </div>
                         </div>
 
                       </div>
                   </div>
               </div>
           </section>
-
         </div>
       </div>
+    </div>
+
+    <section id="image-grid" class="card transparent-card">
+        <div class="card-body collapse in">
+            <div class="card-block my-gallery" itemscope="" itemtype="http://schema.org/ImageGallery">
+                <div class="row">
+                    <div class="grid-hover">
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <figure class="effect-sarah">
+                                <img src="http://lorempixel.com/400/300/people/1" alt="img02">
+                                <figcaption>
+                                    <h2>Holy
+                                        <span>Sadie</span>
+                                    </h2>
+                                    <p>Sadie never took her eyes off me.
+                                        <br>She had a dark soul.</p>
+                                    <a href="#">View more</a>
+                                </figcaption>
+                            </figure>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <figure class="effect-sarah">
+                                <img src="http://lorempixel.com/400/300/people/2" alt="img02">
+                                <figcaption>
+                                    <h2>Holy
+                                        <span>Sadie</span>
+                                    </h2>
+                                    <p>Sadie never took her eyes off me.
+                                        <br>She had a dark soul.</p>
+                                    <a href="#">View more</a>
+                                </figcaption>
+                            </figure>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <figure class="effect-sarah">
+                                <img src="http://lorempixel.com/400/300/people/3" alt="img02">
+                                <figcaption>
+                                    <h2>Holy
+                                        <span>Sadie</span>
+                                    </h2>
+                                    <p>Sadie never took her eyes off me.
+                                        <br>She had a dark soul.</p>
+                                    <a href="#">View more</a>
+                                </figcaption>
+                            </figure>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <figure class="effect-sarah">
+                                <img src="http://lorempixel.com/400/300/people/4" alt="img02">
+                                <figcaption>
+                                    <h2>Holy
+                                        <span>Sadie</span>
+                                    </h2>
+                                    <p>Sadie never took her eyes off me.
+                                        <br>She had a dark soul.</p>
+                                    <a href="#">View more</a>
+                                </figcaption>
+                            </figure>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div id="accordionWrap1" role="tablist" aria-multiselectable="true" class="container center-layout">
+        <div class="card-header">
+            <h4 class="card-title">F.A.Q.</h4>
+        </div>
+        <div class="card collapse-icon accordion-icon-rotate">
+            <div id="heading11" class="card-header">
+                <a data-toggle="collapse" data-parent="#accordionWrap1" href="#accordion11" aria-expanded="true" aria-controls="accordion11" class="card-title lead">Я прочитав все, але нічого не зромів.</a>
+            </div>
+            <div id="accordion11" role="tabpanel" aria-labelledby="heading11" class="card-collapse collapse in" aria-expanded="true">
+                <div class="card-body">
+                    <div class="card-block">
+                        Caramels dessert chocolate cake pastry jujubes bonbon. Jelly wafer jelly beans. Caramels
+                        chocolate cake liquorice cake wafer jelly beans croissant
+                        apple pie. Oat cake brownie pudding jelly beans. Wafer liquorice
+                        chocolate bar chocolate bar liquorice. Tootsie roll gingerbread
+                        gingerbread chocolate bar tart chupa chups sugar plum toffee.
+                        Carrot cake macaroon sweet danish. Cupcake soufflé toffee
+                        marzipan candy canes pie jelly-o. Cotton candy bonbon powder
+                        topping carrot cake cookie caramels lemon drops liquorice.
+                        Dessert cookie ice cream toffee apple pie.
+                    </div>
+                </div>
+            </div>
+            <div id="heading12" class="card-header">
+                <a data-toggle="collapse" data-parent="#accordionWrap1" href="#accordion12" aria-expanded="false" aria-controls="accordion12" class="card-title lead collapsed">Наприклад я від Кононенка, і шо далі?</a>
+            </div>
+            <div id="accordion12" role="tabpanel" aria-labelledby="heading12" class="card-collapse collapse" aria-expanded="false">
+                <div class="card-body">
+                    <div class="card-block">
+                        Sugar plum bear claw oat cake chocolate jelly tiramisu dessert pie. Tiramisu macaroon
+                        muffin jelly marshmallow cake. Pastry oat cake chupa chups.
+                        Caramels marshmallow carrot cake topping donut sesame snaps
+                        toffee tootsie roll. Lollipop sweet jelly beans oat cake
+                        biscuit pastry chocolate cake. Cupcake chocolate biscuit
+                        lemon drops cotton candy marshmallow oat cake donut. Croissant
+                        chocolate cake oat cake brownie topping carrot cake jelly
+                        beans. Dessert gingerbread marshmallow pudding donut lemon
+                        drops cake. Cake topping gummi bears cake.
+                    </div>
+                </div>
+            </div>
+            <div id="heading13" class="card-header">
+                <a data-toggle="collapse" data-parent="#accordionWrap1" href="#accordion13" aria-expanded="false" aria-controls="accordion13" class="card-title lead collapsed">Як тут зароблять біткойни, хлопці?</a>
+            </div>
+            <div id="accordion13" role="tabpanel" aria-labelledby="heading13" class="card-collapse collapse" aria-expanded="false">
+                <div class="card-body">
+                    <div class="card-block">
+                        Candy cupcake sugar plum oat cake wafer marzipan jujubes lollipop macaroon. Cake
+                        dragée jujubes donut chocolate bar chocolate cake cupcake
+                        chocolate topping. Dessert jelly beans toffee muffin tiramisu
+                        sesame snaps brownie. Cake halvah pastry soufflé oat cake
+                        candy candy canes. Lemon drops gummies gingerbread toffee.
+                        Tart jelly candy pastry. Pastry cake jelly beans carrot cake
+                        marzipan lollipop muffin. Soufflé jujubes cupcake. Powder
+                        danish candy carrot cake pastry. Tart marshmallow caramels
+                        cake macaroon gummies lollipop.
+                    </div>
+                </div>
+            </div>
+            <div id="heading14" class="card-header">
+                <a data-toggle="collapse" data-parent="#accordionWrap1" href="#accordion14" aria-expanded="false" aria-controls="accordion14" class="card-title lead collapsed">Як скинуть гривню на Приват? Альо!</a>
+            </div>
+            <div id="accordion14" role="tabpanel" aria-labelledby="heading14" class="card-collapse collapse" aria-expanded="false" style="height: 0px;">
+                <div class="card-body">
+                    <div class="card-block">
+                        Sesame snaps chocolate lollipop sesame snaps apple pie chocolate cake sweet roll.
+                        Dragée candy canes carrot cake chupa chups danish cake sugar
+                        plum candy. Cake powder biscuit bear claw. Sesame snaps cotton
+                        candy cheesecake topping ice cream cookie tiramisu. Liquorice
+                        bonbon cookie pie halvah. Cookie toffee ice cream cotton
+                        candy lollipop fruitcake. Tart cheesecake tiramisu danish
+                        marzipan pie pastry chocolate cake. Pastry bonbon lollipop
+                        oat cake pastry halvah dessert jelly. Toffee caramels croissant
+                        apple pie chupa chups toffee muffin chupa chups apple pie.
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!--(bake footer.html)-->
