--- a/src/html/403.html
+++ b/src/html/403.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" data-textdirection="ltr" class="loading">
+<html lang="uk" data-textdirection="ltr" class="loading">
 
-  <!--(bake parts/head.html title="Сторінку не знайдено")-->
+<!--(bake parts/head.html title="Доступ заборонено")-->
 
   <body data-open="click" data-menu="vertical-menu" data-col="1-column" class="vertical-layout vertical-menu 1-column  blank-page blank-page">
     <!-- ////////////////////////////////////////////////////////////////////////////-->
@@ -12,8 +12,8 @@
         <div class="content-body"><section class="flexbox-container">
     <div class="col-md-4 offset-md-4 col-xs-10 offset-xs-1">
     <div class="card-header bg-transparent no-border pb-0">
-        <h2 class="error-code text-xs-center mb-2">404</h2>
-        <h3 class="text-uppercase text-xs-center">Page Not Found !</h3>
+        <h2 class="error-code text-xs-center mb-2">403</h2>
+        <h3 class="text-uppercase text-xs-center">Доступ заборонено</h3>
     </div>
     <div class="card-body collapse in">
         <fieldset class="row py-2">
