--- a/src/html/fund-page.html
+++ b/src/html/fund-page.html
@@ -1,43 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" data-textdirection="ltr" class="loading">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-        <meta name="description" content="Stack admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template with unlimited possibilities.">
-        <meta name="keywords" content="admin template, stack admin template, dashboard template, flat admin template, responsive admin template, web app">
-        <meta name="author" content="PIXINVENT">
-        <title>User Profile - Stack Responsive Bootstrap 4 Admin Template</title>
-        <link rel="apple-touch-icon" href="../../../app-assets/images/ico/apple-icon-120.png">
-        <link rel="shortcut icon" type="image/x-icon" href="../../../app-assets/images/ico/favicon.ico">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i%7COpen+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
-        <!-- BEGIN VENDOR CSS-->
-        <link rel="stylesheet" type="text/css" href="app-assets/css/bootstrap.css">
-        <link rel="stylesheet" type="text/css" href="app-assets/fonts/feather/style.min.css">
-        <link rel="stylesheet" type="text/css" href="app-assets/fonts/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="app-assets/fonts/simple-line-icons/style.min.css">
 
-        <!-- END VENDOR CSS-->
-        <!-- BEGIN STACK CSS-->
-        <link rel="stylesheet" type="text/css" href="../../../app-assets/css/bootstrap-extended.css">
-        <link rel="stylesheet" type="text/css" href="../../../app-assets/css/app.css">
-        <link rel="stylesheet" type="text/css" href="../../../app-assets/css/colors.css">
-        <!-- END STACK CSS-->
-        <!-- BEGIN Page Level CSS-->
-        <link rel="stylesheet" type="text/css" href="../../../app-assets/css/core/menu/menu-types/vertical-menu.css">
-        <link rel="stylesheet" type="text/css" href="../../../app-assets/css/core/menu/menu-types/vertical-overlay-menu.css">
-        <link rel="stylesheet" type="text/css" href="../../../app-assets/css/pages/users.css">
-        <!-- END Page Level CSS-->
-        <!-- BEGIN Custom CSS-->
-        <link rel="stylesheet" type="text/css" href="../../../assets/css/style.css">
-        <!-- END Custom CSS-->
-    </head>
+  <!--(bake parts/head.html title="Сторінка фонду")-->
 
   <body data-open="click" data-menu="vertical-menu" data-col="2-columns" class="vertical-layout vertical-menu 2-columns fixed-navbar">
 
     <!--(bake parts/navbar-top.html)-->
 
-    <!--(bake parts/left-sidebar-menu.html)-->
+    <!--(bake parts/left-sidebar-menu-fund-page.html)-->
 
     <div class="app-content content container-fluid">
       <div class="content-wrapper">
@@ -127,6 +97,73 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="row" id="image-grid">
+                    <div class="col-xs-12">
+                        <section class="card">
+                            <div class="card-body collapse in">
+                                <div class="card-block my-gallery" itemscope="" itemtype="http://schema.org/ImageGallery">
+                                    <div class="row">
+                                        <div class="grid-hover">
+                                            <div class="col-md-3 col-sm-6 col-xs-12">
+                                                <figure class="effect-sarah">
+                                                    <img src="http://lorempixel.com/400/300/people/1" alt="img02">
+                                                    <figcaption>
+                                                        <h2>Holy
+                                                            <span>Sadie</span>
+                                                        </h2>
+                                                        <p>Sadie never took her eyes off me.
+                                                            <br>She had a dark soul.</p>
+                                                        <a href="#">View more</a>
+                                                    </figcaption>
+                                                </figure>
+                                            </div>
+                                            <div class="col-md-3 col-sm-6 col-xs-12">
+                                                <figure class="effect-sarah">
+                                                    <img src="http://lorempixel.com/400/300/people/2" alt="img02">
+                                                    <figcaption>
+                                                        <h2>Holy
+                                                            <span>Sadie</span>
+                                                        </h2>
+                                                        <p>Sadie never took her eyes off me.
+                                                            <br>She had a dark soul.</p>
+                                                        <a href="#">View more</a>
+                                                    </figcaption>
+                                                </figure>
+                                            </div>
+                                            <div class="col-md-3 col-sm-6 col-xs-12">
+                                                <figure class="effect-sarah">
+                                                    <img src="http://lorempixel.com/400/300/people/3" alt="img02">
+                                                    <figcaption>
+                                                        <h2>Holy
+                                                            <span>Sadie</span>
+                                                        </h2>
+                                                        <p>Sadie never took her eyes off me.
+                                                            <br>She had a dark soul.</p>
+                                                        <a href="#">View more</a>
+                                                    </figcaption>
+                                                </figure>
+                                            </div>
+                                            <div class="col-md-3 col-sm-6 col-xs-12">
+                                                <figure class="effect-sarah">
+                                                    <img src="http://lorempixel.com/400/300/people/4" alt="img02">
+                                                    <figcaption>
+                                                        <h2>Holy
+                                                            <span>Sadie</span>
+                                                        </h2>
+                                                        <p>Sadie never took her eyes off me.
+                                                            <br>She had a dark soul.</p>
+                                                        <a href="#">View more</a>
+                                                    </figcaption>
+                                                </figure>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
                     </div>
                 </div>
             </div>
