--- a/src/html/not-logged-index.html
+++ b/src/html/not-logged-index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-textdirection="ltr" class="loading">
-  <!--(bake parts/head.html)-->
+
+  <!--(bake parts/head.html title="Головна")-->
 
   <body data-open="click" data-menu="horizontal-menu" data-col="2-columns" class="horizontal-layout horizontal-menu 2-columns steps-page">
 
