--- a/src/html/register.html
+++ b/src/html/register.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" data-textdirection="ltr" class="loading">
 
-<!--(bake parts/head.html title="Вхід")-->
+    <!--(bake parts/head.html title="Реєстрація")-->
 
-  <body data-open="click" data-menu="vertical-menu" data-col="1-column" class="vertical-layout vertical-menu 1-column bg-full-screen-image blank-page blank-page login-page">
+  <body data-open="click" data-menu="vertical-menu" data-col="1-column" class="vertical-layout vertical-menu 1-column bg-full-screen-image blank-page blank-page">
     <!-- ////////////////////////////////////////////////////////////////////////////-->
     <div class="app-content content container-fluid">
       <div class="content-wrapper">
         <div class="content-header row">
         </div>
         <div class="content-body"><section class="flexbox-container">
-    <div class="col-md-4 offset-md-4 col-xs-10 offset-xs-1 box-shadow-3 p-0">
+    <div class="col-md-4 offset-md-4 col-xs-10 offset-xs-1 box-shadow-2 p-0">
         <div class="card border-grey border-lighten-3 px-1 py-1 m-0">
-            <div class="card-header no-border">
+            <div class="card-header no-border pb-0">
                 <div class="card-title text-xs-center">
                     <img src="../../../app-assets/images/logo/stack-logo-dark.png" alt="branding logo">
                 </div>
@@ -25,13 +25,19 @@
                     <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-linkedin"><span class="fa fa-linkedin font-medium-4"></span></a>
                     <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-github"><span class="fa fa-github font-medium-4"></span></a>
                 </div>
-                <p class="card-subtitle line-on-side text-muted text-xs-center font-small-3 mx-2 my-1"><span>OR Using Account Details</span></p>
+                <p class="card-subtitle line-on-side text-muted text-xs-center font-small-3 mx-2 my-1"><span>OR Using Email</span></p>
                 <div class="card-block">
                     <form class="form-horizontal" action="index.html" novalidate>
                         <fieldset class="form-group position-relative has-icon-left">
-                            <input type="text" class="form-control" id="user-name" placeholder="Your Username" required>
+                            <input type="text" class="form-control" id="user-name" placeholder="User Name">
                             <div class="form-control-position">
                                 <i class="ft-user"></i>
+                            </div>
+                        </fieldset>
+                        <fieldset class="form-group position-relative has-icon-left">
+                            <input type="email" class="form-control" id="user-email" placeholder="Your Email Address" required>
+                            <div class="form-control-position">
+                                <i class="ft-mail"></i>
                             </div>
                         </fieldset>
                         <fieldset class="form-group position-relative has-icon-left">
@@ -49,12 +55,11 @@
                             </div>
                             <div class="col-md-6 col-xs-12 float-sm-left text-xs-center text-sm-right"><a href="recover-password.html" class="card-link">Forgot Password?</a></div>
                         </fieldset>
-                        <button type="submit" class="btn btn-outline-primary btn-block"><i class="ft-unlock"></i> Login</button>
+                        <button type="submit" class="btn btn-outline-primary btn-block"><i class="ft-user"></i> Register</button>
                     </form>
                 </div>
-                <p class="card-subtitle line-on-side text-muted text-xs-center font-small-3 mx-2 my-1"><span>New to Stack ?</span></p>
                 <div class="card-block">
-                    <a href="register-with-bg-image.html" class="btn btn-outline-danger btn-block"><i class="ft-user"></i> Register</a>
+                    <a href="login-with-bg-image.html" class="btn btn-outline-danger btn-block"><i class="ft-unlock"></i> Login</a>
                 </div>
             </div>
         </div>
